; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_move.c_changed_line_abv_curs.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_move.c_changed_line_abv_curs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@VALID_WROW = common dso_local global i32 0, align 4
@VALID_WCOL = common dso_local global i32 0, align 4
@VALID_VIRTCOL = common dso_local global i32 0, align 4
@VALID_CROW = common dso_local global i32 0, align 4
@VALID_CHEIGHT = common dso_local global i32 0, align 4
@VALID_TOPLINE = common dso_local global i32 0, align 4
@curwin = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @changed_line_abv_curs() #0 {
  %1 = load i32, i32* @VALID_WROW, align 4
  %2 = load i32, i32* @VALID_WCOL, align 4
  %3 = or i32 %1, %2
  %4 = load i32, i32* @VALID_VIRTCOL, align 4
  %5 = or i32 %3, %4
  %6 = load i32, i32* @VALID_CROW, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @VALID_CHEIGHT, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @VALID_TOPLINE, align 4
  %11 = or i32 %9, %10
  %12 = xor i32 %11, -1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curwin, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = and i32 %15, %12
  store i32 %16, i32* %14, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
